<resources>
    <string name="app_name">MovieApp</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>

    <!-- These are the resources of the Settins Activity-->
    <!--Settins titles-->
    <string name="pref_title_order">Order By</string>
    <string name="pref_title_year">Year</string>
    <string name="pref_title_votes">More than votes</string>
    <string name="pref_title_rating">Rating more of</string>

    <!--Settins labels-->
    <string name="pref_label_by_rating_desc">Rating desc</string>
    <string name="pref_label_by_rating_asc">Rating asc</string>

    <!--Settins values-->
    <string name="pref_value_by_rating_asc">vote_average.asc</string>
    <string name="pref_value_by_rating_desc">vote_average.desc</string>
    <string name="pref_value_year">2010</string>

    <!--Settins label and values for votes-->
    <string name="pref_label_values_votes_200">200</string>
    <string name="pref_label_values_votes_400">400</string>
    <string name="pref_label_values_votes_900">900</string>
    <string name="pref_label_values_votes_1500">1500</string>
    <string name="pref_label_values_votes_3000">3000</string>

    <!--Settins label and values for rating-->
    <string name="pref_label_values_rating_2">2</string>
    <string name="pref_label_values_rating_4">4</string>
    <string name="pref_label_values_rating_6">6</string>
    <string name="pref_label_values_rating_7">7</string>
    <string name="pref_label_values_rating_8">8</string>

    <!--Settins keys-->
    <string name="pref_key_rating">vote_average.gte</string>
    <string name="pref_key_votes">vote_count.gte</string>
    <string name="pref_key_year">primary_release_year</string>
    <string name="pref_key_order">sort_by</string>

</resources>
